Update 0.18.0 changelog (#564)
* Update 0.18.0 changelog

* Address review comments

* Address review comments